SONAR-5820 fix alignment of rule parameters

--- a/server/sonar-web/src/main/less/coding-rules.less
+++ b/server/sonar-web/src/main/less/coding-rules.less
@@ -123,12 +123,13 @@
 
   .value {
     display: inline-block;
+    vertical-align: top;
+    line-height: 23px;
     max-width: 300px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     font-family: @monoFontFamily;
-    vertical-align: baseline;
   }
 }
 .coding-rules-detail-quality-profile-parameter + .coding-rules-detail-quality-profile-parameter { margin-top: 0; }
@@ -257,6 +258,7 @@
 }
 
 .coding-rules-detail-parameter-value {
+  font-family: @monoFontFamily;
   word-break: break-all;
 }
 
